# AOC-2022

./: AOC2022.cabal  CHANGELOG.md  Formatter.hs
app/: Main.hs
src/: Solver.hs
src/Day1/: Part1.hs  Part2.hs  Utils.hs
