cabal-version:      2.4
name:               AOC2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Pinto
maintainer:         Daniel.Andres.Pinto@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Day1.Part1, Day1.Part2, Day1.Utils,
        Solver

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.0.0,
        attoparsec ^>=0.14.4,
        io-streams ^>=1.5.2.2,
        bytestring ^>=0.11.3.1,
    hs-source-dirs:   src
    default-language: Haskell2010

executable AOC2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        AOC2022

    hs-source-dirs:   app
    default-language: Haskell2010
